force-app/main/default/objects/Employee__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>The email of the employee</description>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>