force-app/main/default/objects/Employee__c/fields/Jira_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Jira_User_Id__c</fullName>
    <label>Jira User Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>