force-app/main/default/objects/Employee__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>Phone number of the employee</description>
    <label>Mobile</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>