force-app/main/default/objects/Employee__c/fields/Profile_Image__c.field-meta.xml
<CustomField>
    <fullName>Profile_Image__c</fullName>
    <label>Profile Image</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>