force-app/main/default/objects/Employee__c/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <label>UserName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>